[tool.poetry]
name = "aster"
version = "0.0.1"
description = "Portfolio management strategy validator"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "aster"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
scipy = "^1.14.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"